hfst: New upstream release
Also includes library name change and improvements from Debian.

Bug: T181463
Change-Id: I1b5a101a517962773b8bc51daa82cf893e303434

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+hfst (3.13.0~r3461-1+wmf1) jessie-wikimedia; urgency=low
+
+  * New upstream release.
+  * Renamed libhfstNN-dev to plain libhfst-dev
+  * debian/docs change README to README.rst
+  * Updated debian/watch file.
+  * Updated Build-Depends.
+
+ -- Kartik Mistry <kartik@debian.org>  Mon, 04 Dec 2017 16:52:12 +0530
+
 hfst (3.10.0~r2798-1+wmf1) jessie; urgency=low
 
   * Rebuild for Jessie.
