hfst: New upstream release
Bug: T206439
Change-Id: I280fab956c5737376ea16506475d4945c2f2a20b

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hfst (3.15.0-1+wmf1) jessie-wikimedia; urgency=low
+
+  * New upstream release.
+
+ -- Kartik Mistry <kartik@debian.org>  Tue, 16 Oct 2018 08:44:26 +0530
+
 hfst (3.13.0~r3461-1+wmf2) jessie-wikimedia; urgency=low
 
   * Update Homepage and Debian URLs.
