--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+hfst (3.15.1-3+wmf1) jessie-wikimedia; urgency=low
+
+  * New upstream release.
+  * Removed Python bindings.
+  * Minor fixes in debian/rules, debian/watch.
+
+ -- Kartik Mistry <kartik@debian.org>  Wed, 04 Mar 2020 18:13:55 +0530
+
 hfst (3.15.0-1+wmf1) jessie-wikimedia; urgency=low
 
   * New upstream release.
