New upstream version 3.15.1

--- a/test/tools/tokenize-backtrack-out-giella-cg-contiguous.strings
+++ b/test/tools/tokenize-backtrack-out-giella-cg-contiguous.strings
@@ -1,9 +1,9 @@
 "<su.>"
-	"." PUNCT <W:0.0000000000> "<.>"
-		"su" Adv Abbr <W:0.0000000000> "<su>"
-	"." PUNCT <W:0> "<.>"
-		"su" Prn <W:0> "<su>"
+	"." PUNCT <W:0.0> "<.>"
+		"su" Adv Abbr <W:0.0> "<su>"
+	"." PUNCT <W:0.0> "<.>"
+		"su" Prn <W:0.0> "<su>"
 : 
 "<su>"
-	"su" Prn <W:0.0000000000>
+	"su" Prn <W:0.0>
 :\n
