--- a/test/tools/tokenize-backtrack-out-giella-cg.strings
+++ b/test/tools/tokenize-backtrack-out-giella-cg.strings
@@ -1,21 +1,21 @@
 "<busse>"
-	"busse" N <W:0.0000000000>
-	"busset" V <W:0.0000000000>
+	"busse" N <W:0.0>
+	"busset" V <W:0.0>
 : 
 "<skuvla>"
-	"skuvla" N <W:0.0000000000>
+	"skuvla" N <W:0.0>
 : 
 "<skuvla busse>"
-	"skuvlabusse" N ErrSpace <W:0.0000000000>
-	"busset" V <W:0> "<busse>"
-		"skuvla" N <W:0> "<skuvla >"
-	"busse" N <W:0> "<busse>"
-		"skuvla" N <W:0> "<skuvla >"
+	"skuvlabusse" N ErrSpace <W:0.0>
+	"busset" V <W:0.0> "<busse>"
+		"skuvla" N <W:0.0> "<skuvla >"
+	"busse" N <W:0.0> "<busse>"
+		"skuvla" N <W:0.0> "<skuvla >"
 : 
 "<Jan.>"
-	"Jan." N Abbr <W:0.0000000000>
-	"." PUNCT <W:0.0000000000> "<.>"
-		"Jan." N Abbr <W:0.0000000000> "<Jan>"
-	"." PUNCT <W:0> "<.>"
-		"Jan" N Prop <W:0> "<Jan>"
+	"Jan." N Abbr <W:0.0>
+	"." PUNCT <W:0.0> "<.>"
+		"Jan." N Abbr <W:0.0> "<Jan>"
+	"." PUNCT <W:0.0> "<.>"
+		"Jan" N Prop <W:0.0> "<Jan>"
 :\n
