--- a/test/tools/tokenize-dog-out-giella-cg.strings
+++ b/test/tools/tokenize-dog-out-giella-cg.strings
@@ -2,14 +2,14 @@
 	"test" ?
 : 
 "<dog>"
-	"dog" N <W:0.0000000000>
+	"dog" N <W:0.0>
 : 
 "<be dog>"
-	"dog" N <W:0.0000000000> "<dog>"
-		"be" V <W:0.0000000000> "<be >"
-	"bedog" V <W:0.0000000000>
+	"dog" N <W:0.0> "<dog>"
+		"be" V <W:0.0> "<be >"
+	"bedog" V <W:0.0>
 : 
 "<catdog>"
-	"dog" N <W:0.0000000000>
-		"cat" N Cmp <W:0.0000000000>
+	"dog" N <W:0.0>
+		"cat" N Cmp <W:0.0>
 : собака\n
